--- a/views/index.html
+++ b/views/index.html
@@ -67,6 +67,7 @@
 							</div>
 							<a class="content_container">
 										<p class="user_name"> <name class="avatar_name">{{ value.username }}</name> </p>
+										<p class="user_name"> <name  class="avatar_status">Recording...</name> </p>
 							</a>
 						</script>
 					</div>
