--- a/public/css/default_ui.css
+++ b/public/css/default_ui.css
@@ -384,7 +384,7 @@ body{
 .lightbox_controls{
     width: 100%;
     height: 20%;
-    background-color: white;
+    background-color: blueviolet;
 }
 .one_control{
     width: 25%;
@@ -396,7 +396,7 @@ body{
 }
 
 .one_control i{
-    color: blueviolet;
+    color: white;
 }
 
 
@@ -538,4 +538,11 @@ textarea:focus, input:focus{
     align-items: center;
     flex: 1;
 
+}
+
+
+.tab_title{
+    color: white;
+    font-family: 'Helvetica Neue Medium';
+    font-size: 18px;
 }
