--- a/public/css/default_ui.css
+++ b/public/css/default_ui.css
@@ -350,7 +350,21 @@ body{
     width: 100%;
     height: 100%;
 }
-
+@media (max-width:1600px) {
+    .lightbox_container{
+        width: 45vw;
+        height: 75vh;
+        background-color:white;
+        position: relative;
+        display: block;
+    }
+    .lightbox_name{
+        padding: 25px 25px;
+        font-family: 'Helvetica Neue Bold';
+        font-size: 40px;
+    }
+    
+}
 @media (max-width:1200px) {
     .lightbox_container{
         width: 50vw;
