--- a/views/index.html
+++ b/views/index.html
@@ -136,12 +136,12 @@
             });
 		}
 		function active(cls){
-			$('.fa-camera').parent().removeClass('active');
-			$('.fa-users').parent().removeClass('active');
-			$('.fa-circle-notch').parent().removeClass('active');
-			$('.fa-comments-dot').parent().removeClass('active');
+			$('.ion-ios-camera-outline').parent().removeClass('active');
+			$('.ion-ios-chatboxes-outline').parent().removeClass('active');
+			$('.ion-ios-people-outline').parent().removeClass('active');
+			$('.ion-ios-ionic-outline').parent().removeClass('active');
+			$('.ion-ios-telephone-outline').parent().removeClass('active');
 			$(cls).parent().removeClass('active');
-			$('.fa-phone').parent().removeClass('active');
 			$(cls).addClass('active');
 		}
 	
@@ -196,6 +196,7 @@
 			$('.tab_phone').removeClass('hidden');
 		}
 		ROUTE('/chats/{ unique }/',function(){	
+				active('.ion-ios-chatboxes-outline');
 				hider();
 				SET('common.page','messages');
 		},'current_chat');
